--- a/package.json
+++ b/package.json
@@ -1,40 +1,107 @@
 {
   "name": "tree-sitter-java",
-  "version": "0.19.1",
+  "version": "0.21.0",
   "description": "Java grammar for tree-sitter",
+  "repository": "github:tree-sitter/tree-sitter-java",
+  "license": "MIT",
+  "author": "Ayman Nadeem <aymannadeem@github.com>",
+  "contributors": [
+    "Max Brunsfeld <maxbrunsfeld@gmail.com>",
+    "Amaan Qureshi <amaanq12@gmail.com>"
+  ],
   "main": "bindings/node",
+  "types": "bindings/node",
   "keywords": [
-    "parser",
+    "incremental",
+    "parsing",
+    "tree-sitter",
     "java"
   ],
-  "author": "Ayman Nadeem",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/tree-sitter/tree-sitter-java/issues"
-  },
-  "homepage": "https://github.com/tree-sitter/tree-sitter-java#readme",
+  "files": [
+    "grammar.js",
+    "binding.gyp",
+    "prebuilds/**",
+    "bindings/node/*",
+    "queries/*",
+    "src/**"
+  ],
   "dependencies": {
-    "nan": "^2.14.1"
+    "node-addon-api": "^8.0.0",
+    "node-gyp-build": "^4.8.0"
+  },
+  "peerDependencies": {
+    "tree-sitter": "^0.21.0"
+  },
+  "peerDependenciesMeta": {
+    "tree_sitter": {
+      "optional": true
+    }
   },
   "devDependencies": {
-    "tree-sitter-cli": "^0.20.6"
+    "eslint": "^8.57.0",
+    "eslint-config-google": "^0.14.0",
+    "tree-sitter-cli": "^0.22.2",
+    "prebuildify": "^6.0.0"
   },
   "scripts": {
-    "build": "tree-sitter generate && node-gyp rebuild",
-    "test": "tree-sitter test && script/parse-examples",
-    "test-windows": "tree-sitter test",
-    "build-test": "tree-sitter generate && node-gyp build && tree-sitter test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tree-sitter/tree-sitter-java.git"
+    "install": "node-gyp-build",
+    "prebuildify": "prebuildify --napi --strip",
+    "build": "tree-sitter generate --no-bindings",
+    "build-wasm": "tree-sitter build --wasm",
+    "lint": "eslint grammar.js",
+    "parse": "tree-sitter parse",
+    "test": "tree-sitter test"
   },
   "tree-sitter": [
     {
       "scope": "source.java",
       "file-types": [
         "java"
+      ],
+      "highlights": "queries/highlights.scm",
+      "tags": "queries/tags.scm"
+    }
+  ],
+  "eslintConfig": {
+    "env": {
+      "commonjs": true,
+      "es2021": true
+    },
+    "extends": "google",
+    "parserOptions": {
+      "ecmaVersion": "latest",
+      "sourceType": "module"
+    },
+    "rules": {
+      "arrow-parens": "off",
+      "camel-case": "off",
+      "indent": [
+        "error",
+        2,
+        {
+          "SwitchCase": 1
+        }
+      ],
+      "max-len": [
+        "error",
+        {
+          "code": 160,
+          "ignoreComments": true,
+          "ignoreUrls": true,
+          "ignoreStrings": true
+        }
+      ],
+      "spaced-comment": [
+        "warn",
+        "always",
+        {
+          "line": {
+            "markers": [
+              "/"
+            ]
+          }
+        }
       ]
     }
-  ]
+  }
 }
